Bug 800603: Just check rv (not rv & outparam) after calling imgIRequest:GetImage & GetImagePrincipal. r=jrmuizel